# io-api-benchmark

./: Cargo.toml  README.md  benchmark copy.json  benchmark-io_uring.json  benchmark-lite.json  benchmark.json  justfile  report.jinja.html
benches/cloud/: io-benchmarks-aws-i7i-local-ext4.json  io-benchmarks-do-120gb.html  io-benchmarks-do-120gb.json  report-aws-m6i-ebs.html  report-aws-m6i-ebs.json
benches/hdd-ext4/: report-hdd.html  report-hdd.json
benches/laptop-ssd-ext4/: report.json
results/: README.md
results/cloud/: io-benchmarks-aws-i7i-local-ext4.html  io-benchmarks-aws-i7i-local-xfs.html  io-benchmarks-aws-i7i-local-xfs.json
results/laptop-ssd-ext4/: report.html
src/: bench_settings.rs  buffered_io.rs  buffered_io_uring.rs  direct_async_io.rs  direct_io.rs  direct_io_uring.rs  io_data.rs  main.rs  report.rs  run_benchmark.rs
