[package]
name = "io-experiments"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
crc = "3.3.0"
futures = "0.3.31"
io-uring = "0.7.7"
libaio-futures = "0.2.3"
libc = "0.2.172"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
